@@ -1,3 +1,9 @@
+2000-09-01  Richard Henderson  <rth@cygnus.com>
+
+	* config/tc-ia64.c (match): Don't inline.
+	(extra_goodness): New.
+	(md_begin): Prefer nop.f and nop.b for best_template.
+
 2000-08-31  Kazu Hirata  <kazu@hxi.com>
 
 	* as.c: Fix formatting.
